<resources>
    <string name="app_name">Bemp Admin</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="image">image</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar">Daftar</string>
    <string name="silahkan_masuk_terlebih_dahulu">Silahkan masuk terlebih dahulu</string>
    <string name="nama_depan">Nama Lengkap</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="pendaftaran_admin">Pendaftaran Admin</string>
    <string name="ok">Oke</string>
    <string name="berhasilregister">Berhasil mendaftarkan %1$s Admin.\Kata Sandi standart: bemp123456\nSetelah melakukan login, silahkan segera melakukan perubahan kata sandi.</string>
    <string name="berhasilupdateadmin">Berhasil ubah data %1$s %2$s</string>
    <string name="gagalregister">Gagal Register Admin</string>
    <string name="namadepanerr">Nama Lengkap tidak boleh kosong!</string>
    <string name="emailerr">Email tidak boleh kosong!</string>
    <string name="namabelakangerr">Nama belakang tidak boleh kosong!</string>
    <string name="passerr">Kata Sandi tidak boleh kosong!</string>
    <string name="emailterdaftar">Email sudah terdaftar</string>
    <string name="errorregister">Maaf, terjadi kesalahan dalam menyimpan data</string>
    <string name="loginerror">Email atau kata sandi salah</string>
    <string name="berita">Berita</string>
    <string name="profil">Profil</string>
    <string name="prestasi">Prestasi</string>
    <string name="lomba">Lomba</string>
    <string name="selamat_datang_admin">Selamat Datang %1$s,</string>
    <string name="date">%1$s,</string>
    <string name="tambah_berita">Tambah Berita</string>
    <string name="tambah_lomba">Tambah Lomba</string>
    <string name="tambah_prestasi">Tambah Prestasi</string>
    <string name="struktur_organisasi">Struktur Organisasi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="keluar">Keluar</string>
    <string name="bio">Bio&#8230;</string>
    <string name="simpam">Simpan</string>
    <string name="tentang_struktur_organisasi">Tentang struktur organisasi</string>
    <string name="_300">300</string>
    <string name="bioerr">Bio belom diisi</string>
    <string name="biodisimpan">Bio berhasil disimpan</string>
    <string name="biogagalsimpan">Bio gagal disimpan</string>
    <string name="nama_anggota">Nama Anggota</string>
    <string name="divisi">Divisi</string>
    <string name="tambah_divisi">Tambah Divisi</string>
    <string name="nama_divisi">Nama Divisi</string>
    <string name="namadivisierr">Nama divisi tidak boleh kosong</string>
    <string name="errorload">Maaf, terjadi kesalahan dalam mengambil data</string>
    <string name="tambah_anggota">Tambah Anggota</string>
    <string name="batal">Batal</string>
    <string name="warninghapusdivisi">Apakah divisi \"%1$s \" akan dihapus?</string>
    <string name="_100">100</string>
    <string name="namanggotaerr">Nama anggota tidak boleh kosong</string>
    <string name="divisierr">Divisi belom dipilih</string>
    <string name="mottohidup">Motto Hidup</string>
    <string name="berhasilanggota">Anggota BEM berhasil dsimpan</string>
    <string name="gagalanggota">Anggota BEM gagal disimpan</string>
    <string name="divisititikdua">Divisi:</string>
    <string name="fotokosong">Foto tidak boleh kosong</string>
    <string name="versi_aplikasi">Versi Aplikasi</string>
    <string name="bahasa_pemrograman">Bahasa Pemrograman</string>
    <string name="kotlin">Kotlin</string>
    <string name="nama_aplikasi">Nama Aplikasi</string>
    <string name="database">Database</string>
    <string name="firebase">Firebase</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="ubah_password">Ubah Kata Sandi</string>
    <string name="konfirmasipasserr">Konfirmasi kata sandi baru tidak boleh kosong</string>
    <string name="ubahpasserr">Kata sandi baru dan konfirmasi kata sandi baru tidak sama</string>
    <string name="berhasiubahpass">Kata sandi telah diubah</string>
    <string name="gagalubahpass">Kata sandi gagal diubah</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="kategori_berita">Kategori Berita</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="tambah_gambar">Tambah Gambar</string>
    <string name="judul">Judul Berita</string>
    <string name="isi_berita">Isi Berita</string>
    <string name="judulerr">Judul berita tidak boleh kosong</string>
    <string name="kategorikosong">Kategori belom dipilih</string>
    <string name="isierr">Isi berita belom diisi</string>
    <string name="berhasilberita">Berita berhasil diposting</string>
    <string name="tanggal_posting">Tanggal Posting:</string>
    <string name="diposting_oleh">Diposting Oleh:</string>
    <string name="baca_selengkapnya">Baca Selengkapnya</string>
    <string name="kategori">Kategori:</string>
    <string name="warninghapusanggota">Apakah anggota \"%1$s \" akan dihapus?</string>
    <string name="warninghapusberita">Apakah berita ini akan dihapus?</string>
    <string name="ubah_berita">Ubah Berita</string>
    <string name="diedit_oleh">Diubah Oleh:</string>
    <string name="nim">Nim</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="prestasi_yang_dihasilkan">Prestasi yang dihasilkan</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="ubah_anggota">Ubah Anggota</string>
    <string name="update_prestasi">Update Prestasi</string>
    <string name="nimerr">Nim tidak boleh kosong</string>
    <string name="namamhserr">Nama mahasiswa tidak boleh kosong</string>
    <string name="prestasierr">Prestasi tidak boleh kosong</string>
    <string name="gagalprestasi">Prestasi gagal ditambahkan</string>
    <string name="berhasilprestasi">Prestasi berhasil ditambahkan</string>
    <string name="gagalberita">Berita gagal ditambahkan</string>
    <string name="warninghapusprestasi">Apakah prestasi ini akan dihapus?</string>
    <string name="pamflet_lomba">Pamflet Lomba</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="judul_lomba">Judul Lomba</string>
    <string name="update_lomba">Ubah data lomba</string>
    <string name="judullombaerr">Judul lomba tidak boleh kosong</string>
    <string name="deskripsierr">Deskripsi tidak boleh kosong</string>
    <string name="gagallomba">Lomba gagal ditambahkan</string>
    <string name="berhasillomba">Lomba berhasil ditambahkan</string>
    <string name="warninghapuslomba">Apakah lomba ini akan dihapus?</string>
    <string name="daftar_peserta">Daftar Peserta</string>
    <string name="detail_lomba">Detail Lomba</string>
    <string name="masukkan_nama_mahasiswa">Masukkan nama mahasiswa</string>
    <string name="silahkan_pilih">-- Silahkan pilih --</string>
    <string name="statusadminerr">Status Admin belom dipilih</string>
    <string name="berhasilsimpananggotadanregisteradmin">Berhasil simpan anggota BEM dan terdaftar admin</string>
    <string name="berhasilubahdataanggota">Berhasil ubah data anggota BEM</string>
    <string name="berhasilubahanggotadanhapusadmin">Berhasil ubah data anggota BEM dan status admin terhapus</string>
    <string name="gagalhapusadmin">Status admin gagal dihapus</string>
    <string name="tambah_admin">Tambah Admin / Super Admin</string>
    <string name="bemp123456">bemp123456</string>
    <string name="daftaradmin">Daftar Admin</string>
    <string name="hapusadmin">Apakah %1$s %2$s akan dihapus?</string>
    <string-array name="statusAdmin">
        <item>Super Admin</item>
        <item>Admin</item>
    </string-array>

    <string-array name="statusAdminUpdate">
        <item>Super Admin</item>
        <item>Admin</item>
        <item>Bukan Keduanya</item>
    </string-array>
</resources>