<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.TambahPrestasiActivity">

    <include
        android:id="@+id/includeProgressBar"
        layout="@layout/progressbar_layout_admin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/includeToolbar"
            layout="@layout/toolbar_2_item_admin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nim"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nama_mahasiswa"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPrestasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/prestasi_yang_dihasilkan"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foto_profil"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/tulisan12sp"
            android:textStyle="bold"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_color99000000_rad4px"
            android:layout_marginTop="@dimen/dimen4dp"
            android:layout_marginStart="@dimen/dimen20dp">

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_add_blue"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSimpan"
            style="android:Widget.Material.Button.Borderless"
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="@dimen/dimen35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen32dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:background="@drawable/bg_color45bbff_rad4px"
            android:text="@string/simpam"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/tulisan12sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>