<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.TambahLombaActivity">

    <include
        android:id="@+id/includeProgressBar"
        layout="@layout/progressbar_layout_admin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar_2_item_admin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:layout_marginEnd="@dimen/dimen4dp"
        android:fillViewport="true"
        android:scrollbarSize="@dimen/dimen2dp"
        android:scrollbarThumbVertical="@color/color45bbff"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen0dp"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen16dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtJudulLomba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/judul_lomba"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tulisan12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:background="@drawable/border_color99000000_rad4px"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen10dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/deskripsi"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tulisan12sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16dp"
                android:text="@string/pamflet_lomba"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen4dp"
                android:background="@drawable/border_color99000000_rad4px">

                <ImageView
                    android:id="@+id/imgFoto"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_add_blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSimpan"
                style="android:Widget.Material.Button.Borderless"
                android:layout_width="@dimen/dimen200dp"
                android:layout_height="@dimen/dimen35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen32dp"
                android:layout_marginBottom="@dimen/dimen32dp"
                android:background="@drawable/bg_color45bbff_rad4px"
                android:text="@string/simpam"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/tulisan12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>